# core-logos

./: ARCHITECTURE.md  Cargo.toml  README.md  flake.nix
src/: alias.rs  attribute.rs  const_item.rs  domain.rs  enumeration.rs  error.rs  expression.rs  field.rs  function.rs  generics.rs  impl_block.rs  item.rs  lib.rs  module.rs  name_boundary.rs  newtype.rs  path.rs  pattern.rs  standard.rs  structure.rs  type_reference.rs  use_import.rs  visibility.rs
tests/: archive.rs  attributes.rs  content_hash.rs  content_hash_witness.rs  fixtures.rs  impl_block.rs  name_table.rs  standard_identifiers.rs  textual.rs  use_import.rs  vocabulary_growth.rs
tests/support/: mod.rs
