[package]
name         = "core-logos"
version      = "0.3.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/core-logos"
description  = "The stringless encoded-form algebra of Logos: a closed EncodedItem data language 1-to-1 with Rust in encoded form, text-free, PortableArchive, content-addressed with a NameTable-excluded identity. The TextualRust codec is a later sibling crate."
publish      = false

[lib]
name = "core_logos"
path = "src/lib.rs"

[dependencies]
content-identity = { git = "https://github.com/LiGoldragon/protos.git", rev = "e67c4cf594cb3407e434aba11e168c4d515de543" }
name-table       = { git = "https://github.com/LiGoldragon/protos.git", rev = "e67c4cf594cb3407e434aba11e168c4d515de543" }
rkyv             = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror        = "2"

[dev-dependencies]
core-schema      = { git = "https://github.com/LiGoldragon/core-schema.git", rev = "36142eddc4701c957a7cb0d137b6400709626eb2" }
structural-codec = { git = "https://github.com/LiGoldragon/protos.git", rev = "e67c4cf594cb3407e434aba11e168c4d515de543" }
raw-discovery    = { git = "https://github.com/LiGoldragon/protos.git", rev = "e67c4cf594cb3407e434aba11e168c4d515de543" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
