[package]
name         = "core-logos"
version      = "0.4.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/core-logos"
description  = "The stringless encoded-form algebra of Logos: a closed EncodedItem data language 1-to-1 with Rust in encoded form, text-free, PortableArchive, content-addressed with a NameTable-excluded identity. The TextualRust codec is a later sibling crate."
publish      = false

[lib]
name = "core_logos"
path = "src/lib.rs"

[dependencies]
content-identity = { git = "https://github.com/LiGoldragon/protos.git", rev = "e9983d6220856a011886145ed0ef0cc41c9bf597" }
name-table       = { git = "https://github.com/LiGoldragon/protos.git", rev = "e9983d6220856a011886145ed0ef0cc41c9bf597" }
rkyv             = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror        = "2"

[dev-dependencies]
core-schema      = { git = "https://github.com/LiGoldragon/core-schema.git", rev = "cee7f0873c8ccfba0afe09cbb40de531c9e73077" }
structural-codec = { git = "https://github.com/LiGoldragon/protos.git", rev = "e9983d6220856a011886145ed0ef0cc41c9bf597" }
raw-discovery    = { git = "https://github.com/LiGoldragon/protos.git", rev = "e9983d6220856a011886145ed0ef0cc41c9bf597" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
