[package]
name         = "core-logos"
version      = "0.2.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/core-logos"
description  = "The stringless encoded-form algebra of Logos: a closed EncodedItem data language 1-to-1 with Rust, text-free, PortableArchive, content-addressed with a NameTable-excluded identity. The TextualRust codec is a later sibling crate."
publish      = false

[lib]
name = "core_logos"
path = "src/lib.rs"

[dependencies]
content-identity = { git = "https://github.com/LiGoldragon/protos.git", rev = "d2912838b9ea18eae9ba3f7172e07e92823fa323" }
name-table       = { git = "https://github.com/LiGoldragon/protos.git", rev = "d2912838b9ea18eae9ba3f7172e07e92823fa323" }
rkyv             = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
thiserror        = "2"

[dev-dependencies]
core-schema      = { git = "https://github.com/LiGoldragon/core-schema.git", rev = "90e71212f86507338f11913d334d4c12a225b781" }
structural-codec = { git = "https://github.com/LiGoldragon/protos.git", rev = "d2912838b9ea18eae9ba3f7172e07e92823fa323" }
raw-discovery    = { git = "https://github.com/LiGoldragon/protos.git", rev = "d2912838b9ea18eae9ba3f7172e07e92823fa323" }

[lints.rust]
unsafe_code = "forbid"
unused      = { level = "warn", priority = -1 }
dead_code   = "warn"
